# suzume

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .mcp.json  .npmignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.npm.md  README_ja.md  biome.json  codecov.yml  package.json  tsconfig.json  vitest.config.ts
scripts/mcp/: pyproject.toml
scripts/mcp/tests/: conftest.py  test_constants.py  test_mecab.py  (+9 more)
src/: CMakeLists.txt  suzume.cpp  suzume.h  suzume_c.cpp  suzume_c.h
src/analysis/: CMakeLists.txt  adjective_candidates.cpp  adjective_candidates.h  analyzer.cpp  analyzer.h  bigram_table.cpp  bigram_table.h  candidate_constants.h  candidate_options.h  category_cost.h  connection_rule_options.h  connection_rules.cpp  connection_rules.h  connection_rules_aux.cpp  connection_rules_internal.h  connection_rules_other.cpp  connection_rules_verb.cpp  interfaces.h  join_candidates.cpp  join_candidates.h  scorer.cpp  scorer.h  scorer_constants.h  scorer_options_loader.h  split_candidates.cpp  split_candidates.h  suffix_candidates.cpp  suffix_candidates.h  tokenizer.cpp  tokenizer.h  tokenizer_utils.cpp  tokenizer_utils.h  unknown.cpp  unknown.h  verb_candidates.cpp  verb_candidates.h  verb_candidates_helpers.cpp  verb_candidates_helpers.h  verb_candidates_hiragana.cpp  verb_candidates_kanji.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  debug.h  error.cpp  error.h  kana_constants.h  lattice.cpp  lattice.h  morpheme.h  string_pool.cpp  string_pool.h  types.cpp  types.h  utf8_constants.h  viterbi.cpp  viterbi.h
src/dictionary/: CMakeLists.txt  binary_dict.cpp  binary_dict.h  core_dict.cpp  core_dict.h  dictionary.cpp  dictionary.h  double_array.cpp  double_array.h  string_pool.cpp  string_pool.h  trie.cpp  trie.h  user_dict.cpp  user_dict.h
src/grammar/: CMakeLists.txt  auxiliaries.cpp  auxiliaries.h  auxiliary_generator.cpp  auxiliary_generator.h  char_patterns.cpp  char_patterns.h  conjugation.cpp  conjugation.h  conjugator.cpp  conjugator.h  connection.cpp  connection.h  inflection.cpp  inflection.h  inflection_options.h  inflection_scorer.cpp  inflection_scorer.h  inflection_scorer_constants.h  patterns.cpp  patterns.h  verb_endings.cpp  verb_endings.h
src/normalize/: CMakeLists.txt  char_type.cpp  char_type.h  exceptions.cpp  exceptions.h  normalizer.cpp  normalizer.h  unicode_tables.h  utf8.cpp  utf8.h
src/postprocess/: CMakeLists.txt  lemmatizer.cpp  lemmatizer.h  postprocessor.cpp  postprocessor.h  tag_generator.cpp  tag_generator.h
src/pretokenizer/: CMakeLists.txt  pretokenizer.cpp  pretokenizer.h
src/suzume-cli/: CMakeLists.txt  cli_common.cpp  cli_common.h  cmd_analyze.cpp  cmd_analyze.h  cmd_dict.cpp  cmd_dict.h  cmd_test.cpp  cmd_test.h  dict_compiler.cpp  dict_compiler.h  interactive.cpp  interactive.h  interactive_commands.cpp  interactive_utils.cpp  interactive_utils.h  main.cpp  tsv_parser.cpp  tsv_parser.h
tests/: CMakeLists.txt
tests/analysis/: analyzer_basic_test.cpp  analyzer_grammar_adjective_test.cpp  analyzer_grammar_auxiliary_test.cpp  analyzer_grammar_pattern_test.cpp  analyzer_grammar_suru_test.cpp  analyzer_grammar_test.cpp  analyzer_particle_test.cpp  analyzer_prefix_test.cpp  analyzer_regression_adjective_test.cpp  analyzer_regression_compound_test.cpp  analyzer_regression_copula_test.cpp  analyzer_regression_misc_test.cpp  analyzer_regression_particle_test.cpp  analyzer_regression_test.cpp  analyzer_regression_verb_test.cpp  analyzer_slang_test.cpp  analyzer_strict_compound_test.cpp  analyzer_strict_expression_test.cpp  analyzer_strict_greeting_test.cpp  analyzer_strict_particle_test.cpp  analyzer_strict_test.cpp  analyzer_strict_word_test.cpp  analyzer_usecase_business_test.cpp  analyzer_usecase_casual_test.cpp  analyzer_usecase_conversation_test.cpp  analyzer_usecase_mixed_test.cpp  analyzer_usecase_news_test.cpp  analyzer_usecase_realworld_test.cpp  analyzer_usecase_technical_test.cpp  analyzer_usecase_test.cpp  analyzer_verb_test.cpp  connection_rules_test.cpp  scorer_options_loader_test.cpp
tests/cli/: cli_common_test.cpp  dict_compiler_test.cpp
tests/common/: data_driven_test.h  json_loader.h  test_case.cpp  test_case.h  test_helpers.cpp  test_helpers.h
tests/core/: error_test.cpp  string_pool_test.cpp  types_extended_test.cpp  types_test.cpp
tests/dictionary/: binary_dict_test.cpp  core_dict_test.cpp  dict_string_pool_test.cpp  double_array_test.cpp  trie_test.cpp  user_dict_test.cpp
tests/grammar/: auxiliary_generator_test.cpp  conjugation_test.cpp  conjugator_test.cpp  connection_test.cpp  inflection_basic_test.cpp  inflection_complex_test.cpp  inflection_compound_test.cpp  inflection_imperative_test.cpp  inflection_potential_test.cpp  inflection_test.cpp  patterns_test.cpp
tests/integration/: adjective_irregular_test.cpp  basic_test.cpp  data_driven_sample_test.cpp  grammar_adjective_test.cpp  grammar_auxiliary_test.cpp  grammar_pattern_test.cpp  grammar_suru_test.cpp  particle_test.cpp  prefix_test.cpp  regression_adjective_test.cpp  regression_bugs_20251230_test.cpp  regression_compound_test.cpp  regression_copula_test.cpp  regression_misc_test.cpp  regression_particle_test.cpp  regression_verb_test.cpp  slang_test.cpp  strict_compound_test.cpp  strict_expression_test.cpp  strict_greeting_test.cpp  strict_particle_test.cpp  strict_word_test.cpp  suru_imperative_test.cpp  suzume_api_test.cpp  suzume_c_api_test.cpp  unicode_emoji_test.cpp  universal_tokenization_test.cpp  usecase_botchan_test.cpp  usecase_business_test.cpp  usecase_casual_test.cpp  usecase_conversation_test.cpp  usecase_mixed_test.cpp  usecase_news_test.cpp  usecase_realworld_test.cpp  usecase_technical_test.cpp  verb_test.cpp
tests/normalize/: char_type_test.cpp  normalizer_test.cpp  utf8_test.cpp
tests/output/: japanese_format_test.cpp
tests/postprocess/: tag_generator_test.cpp
tests/pretokenizer/: pretokenizer_number_test.cpp  pretokenizer_test.cpp  pretokenizer_text_test.cpp  pretokenizer_url_test.cpp
tests/wasm/: c-api-analyze.test.ts  c-api-tags.test.ts  helpers.ts  js-api.test.ts  suzume.test.ts
(+192 files in other folders)
