[project]
name = "suzume-mcp"
version = "0.1.0"
description = "MCP server for Suzume Japanese morphological analysis tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "regex",
]

[project.scripts]
suzume-mcp = "suzume_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suzume_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF059", "SIM102", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["suzume_mcp"]
